--- a/src/main/resources/com/example/project/TransactionManagerView.fxml
+++ b/src/main/resources/com/example/project/TransactionManagerView.fxml
@@ -1,53 +1,85 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-   <top>
-      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
-        <tabs>
-          <Tab text="Open / Close">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="602.0" prefWidth="602.0">
-                     <children>
-                        <GridPane prefHeight="237.0" prefWidth="600.0" AnchorPane.bottomAnchor="-66.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-                          <columnConstraints>
-                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                              <RowConstraints maxHeight="49.5" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="59.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="50.5" minHeight="0.0" prefHeight="40.5" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="78.0" minHeight="10.0" prefHeight="37.5" vgrow="SOMETIMES" />
-                            <RowConstraints maxHeight="29.5" minHeight="0.0" prefHeight="0.0" vgrow="SOMETIMES" />
-                              <RowConstraints maxHeight="29.5" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Label text=" First Name" textAlignment="CENTER" />
-                              <Label text="Last Name" GridPane.rowIndex="1" />
-                              <Label text="Date of Birth" GridPane.rowIndex="2" />
-                              <Label text="Account Type" GridPane.rowIndex="3" />
-                              <TextField prefHeight="7.0" prefWidth="162.0" GridPane.columnIndex="1" />
-                              <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <ComboBox prefWidth="150.0" promptText="Account type" visibleRowCount="4" GridPane.columnIndex="1" GridPane.rowIndex="3">
-                                
-                              </ComboBox>
-                              <GridPane GridPane.columnIndex="1" GridPane.rowIndex="5">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="377.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
+    <top>
+        <TabPane prefHeight="376.0" prefWidth="704.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+            <tabs>
+                <Tab text="Open / Close">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="215.0" prefWidth="702.0">
+                            <children>
+                                <GridPane layoutX="14.0" prefHeight="338.0" prefWidth="677.0" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="0.0">
+                                    <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.4000244140625" minWidth="10.0" prefWidth="107.5999984741211" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.00000762939453" minWidth="10.0" prefWidth="195.39997558593748" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.4000244140625" minWidth="10.0" prefWidth="150.60001220703128" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.60009765625" minWidth="10.0" prefWidth="93.4000122070313" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="213.199951171875" minWidth="10.0" prefWidth="174.99998779296868" />
+                                    </columnConstraints>
+                                    <rowConstraints>
+                                        <RowConstraints maxHeight="49.5" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="49.5" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="109.99999999999999" minHeight="9.200000000000003" prefHeight="9.200000000000003" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="100.79999999999998" minHeight="0.0" prefHeight="39.999966430664074" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="128.40003356933596" minHeight="10.0" prefHeight="82.80000000000001" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="95.19999694824219" minHeight="0.0" prefHeight="66.0" vgrow="SOMETIMES" />
+                                    </rowConstraints>
+                                    <children>
+                                        <Label text="First Name" textAlignment="CENTER" />
+                                        <Label text="Last Name" GridPane.rowIndex="1" />
+                                        <Label text="Date of Birth" GridPane.rowIndex="2" />
+                                        <Label text="Account Type" GridPane.rowIndex="3" />
+                                        <TextField prefHeight="7.0" prefWidth="162.0" GridPane.columnIndex="1" />
+                                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                        <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                        <Label text="Account Type" GridPane.rowIndex="3" />
+                                        <RadioButton fx:id="checking" text="Checking" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                                            <toggleGroup>
+                                                <ToggleGroup />
+                                            </toggleGroup>
+                                        </RadioButton>
+                                        <RadioButton fx:id="collegeChecking" text="College Checking" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                                            <toggleGroup>
+                                                <ToggleGroup />
+                                            </toggleGroup>
+                                        </RadioButton>
+                                        <RadioButton fx:id="savings" text="Savings" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                                            <toggleGroup>
+                                                <ToggleGroup />
+                                            </toggleGroup>
+                                        </RadioButton>
+                                        <RadioButton fx:id="market" text="Money Markets" GridPane.columnIndex="4" GridPane.rowIndex="3">
+                                            <toggleGroup>
+                                                <ToggleGroup />
+                                            </toggleGroup>
+                                        </RadioButton>
+                                        <GridPane GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                            <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                        </GridPane>
+                              <GridPane GridPane.columnIndex="2" GridPane.rowIndex="4">
                                 <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                                 </columnConstraints>
                                 <rowConstraints>
@@ -55,23 +87,31 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
+                                 <children>
+                                    <RadioButton mnemonicParsing="false" text="NB" GridPane.halignment="CENTER" />
+                                    <RadioButton mnemonicParsing="false" text="Newark" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                                    <RadioButton mnemonicParsing="false" text="Camden" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                                 </children>
                               </GridPane>
-                           </children>
-                        </GridPane>
-                     </children></AnchorPane>
-            </content>
-          </Tab>
-          <Tab text="Deposit / Withdraw">
-            <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-            </content>
-          </Tab>
-            <Tab text="Account Database">
-              <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
-              </content>
-            </Tab>
-        </tabs>
-      </TabPane>
-   </top>
+                              <Button mnemonicParsing="false" text="Open" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" text="Close" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                                    </children>
+                                </GridPane>
+                            </children>
+                        </AnchorPane>
+                    </content>
+                </Tab>
+                <Tab text="Deposit / Withdraw">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                </Tab>
+                <Tab text="Account Database">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                    </content>
+                </Tab>
+            </tabs>
+        </TabPane>
+    </top>
 </BorderPane>
