--- a/src/main/resources/com/example/project/TransactionManagerView.fxml
+++ b/src/main/resources/com/example/project/TransactionManagerView.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -14,11 +15,13 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
+<AnchorPane xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project.TransactionManagerController">
+
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="377.0" prefWidth="702.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
     <top>
         <TabPane prefHeight="376.0" prefWidth="704.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
             <tabs>
-                <Tab text="Open / Close">
+                <Tab text="Open">
                     <content>
                         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="215.0" prefWidth="702.0">
                             <children>
@@ -31,10 +34,10 @@
                                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="213.199951171875" minWidth="10.0" prefWidth="174.99998779296868" />
                                     </columnConstraints>
                                     <rowConstraints>
-                                        <RowConstraints maxHeight="49.5" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="49.5" minHeight="10.0" prefHeight="35.0" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="109.99999999999999" minHeight="9.200000000000003" prefHeight="9.200000000000003" vgrow="SOMETIMES" />
-                                        <RowConstraints maxHeight="100.79999999999998" minHeight="0.0" prefHeight="39.999966430664074" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="51.2" minHeight="10.0" prefHeight="48.80000610351563" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="56.40001220703125" minHeight="10.0" prefHeight="45.59999389648438" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="109.99999999999999" minHeight="9.200000000000003" prefHeight="27.79998168945312" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="100.79999999999998" minHeight="0.0" prefHeight="39.800018310546875" vgrow="SOMETIMES" />
                                         <RowConstraints maxHeight="128.40003356933596" minHeight="10.0" prefHeight="82.80000000000001" vgrow="SOMETIMES" />
                                         <RowConstraints maxHeight="95.19999694824219" minHeight="0.0" prefHeight="66.0" vgrow="SOMETIMES" />
                                     </rowConstraints>
@@ -43,28 +46,28 @@
                                         <Label text="Last Name" GridPane.rowIndex="1" />
                                         <Label text="Date of Birth" GridPane.rowIndex="2" />
                                         <Label text="Account Type" GridPane.rowIndex="3" />
-                                        <TextField prefHeight="7.0" prefWidth="162.0" GridPane.columnIndex="1" />
-                                        <TextField GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                                        <DatePicker GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                        <TextField fx:id="firstName" prefHeight="7.0" prefWidth="162.0" GridPane.columnIndex="1" />
+                                        <TextField fx:id="lastName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                        <DatePicker fx:id="dob" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                         <Label text="Account Type" GridPane.rowIndex="3" />
                                         <RadioButton fx:id="checking" text="Checking" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
                                             <toggleGroup>
-                                                <ToggleGroup />
+                                                <ToggleGroup fx:id="accountGroup" />
                                             </toggleGroup>
                                         </RadioButton>
                                         <RadioButton fx:id="collegeChecking" text="College Checking" GridPane.columnIndex="2" GridPane.rowIndex="3">
                                             <toggleGroup>
-                                                <ToggleGroup />
+                                                <fx:reference source="accountGroup" />
                                             </toggleGroup>
                                         </RadioButton>
                                         <RadioButton fx:id="savings" text="Savings" GridPane.columnIndex="3" GridPane.rowIndex="3">
                                             <toggleGroup>
-                                                <ToggleGroup />
+                                                <fx:reference source="accountGroup" />
                                             </toggleGroup>
                                         </RadioButton>
                                         <RadioButton fx:id="market" text="Money Markets" GridPane.columnIndex="4" GridPane.rowIndex="3">
                                             <toggleGroup>
-                                                <ToggleGroup />
+                                                <fx:reference source="accountGroup" />
                                             </toggleGroup>
                                         </RadioButton>
                                         <GridPane GridPane.columnIndex="1" GridPane.rowIndex="5">
@@ -88,18 +91,32 @@
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
-                                    <RadioButton mnemonicParsing="false" text="NB" GridPane.halignment="CENTER" />
-                                    <RadioButton mnemonicParsing="false" text="Newark" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
-                                    <RadioButton mnemonicParsing="false" text="Camden" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                                    <RadioButton fx:id="nb" mnemonicParsing="false" text="NB" GridPane.halignment="CENTER">
+                                     <toggleGroup>
+                                         <ToggleGroup fx:id="campusGroup" />
+                                     </toggleGroup>
+                                    </RadioButton>
+                                    <RadioButton fx:id="newark" mnemonicParsing="false" text="Newark" GridPane.halignment="CENTER" GridPane.rowIndex="1" >
+                                        <fx:reference source="campusGroup" />
+                                    </RadioButton>
+                                     <RadioButton fx:id="camden" mnemonicParsing="false" text="Camden" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                         <fx:reference source="campusGroup" />
+
+                                     </RadioButton>
                                  </children>
                               </GridPane>
-                              <Button mnemonicParsing="false" text="Open" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
-                              <Button mnemonicParsing="false" text="Close" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" onAction="#closeAccount" text="Open" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                                 <CheckBox fx:id="loyal" mnemonicParsing="false" text="Loyal Customer" GridPane.columnIndex="4" GridPane.rowIndex="4" GridPane.valignment="TOP" />
+                                 <Label text="Intial Deposit" GridPane.columnIndex="3" />
+                                 <TextField fx:id="deposit" prefHeight="25.0" prefWidth="127.0" GridPane.columnIndex="4" />
                                     </children>
                                 </GridPane>
                             </children>
                         </AnchorPane>
                     </content>
+                </Tab>
+                <Tab text="Close">
+
                 </Tab>
                 <Tab text="Deposit / Withdraw">
                     <content>
@@ -115,3 +132,4 @@
         </TabPane>
     </top>
 </BorderPane>
+</AnchorPane>
