--- a/src/main/resources/com/example/project/TransactionManagerView.fxml
+++ b/src/main/resources/com/example/project/TransactionManagerView.fxml
@@ -105,10 +105,10 @@
                                      </RadioButton>
                                  </children>
                               </GridPane>
-                              <Button mnemonicParsing="false" onAction="#closeAccount" text="Open" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                              <Button mnemonicParsing="false" onAction="#openAccount" text="Open" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
                                  <CheckBox fx:id="loyal" mnemonicParsing="false" text="Loyal Customer" GridPane.columnIndex="4" GridPane.rowIndex="4" GridPane.valignment="TOP" />
                                  <Label text="Intial Deposit" GridPane.columnIndex="3" />
-                                 <TextField fx:id="deposit" prefHeight="25.0" prefWidth="127.0" GridPane.columnIndex="4" />
+                                 <TextField fx:id="balance" prefHeight="25.0" prefWidth="127.0" GridPane.columnIndex="4" />
                                     </children>
                                 </GridPane>
                             </children>
@@ -116,6 +116,96 @@
                     </content>
                 </Tab>
                 <Tab text="Close">
+                    <content>
+                        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="215.0" prefWidth="702.0">
+                            <children>
+                                <GridPane layoutX="14.0" prefHeight="338.0" prefWidth="677.0" AnchorPane.bottomAnchor="9.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="0.0">
+                                    <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="192.4000244140625" minWidth="10.0" prefWidth="107.5999984741211" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="296.00000762939453" minWidth="10.0" prefWidth="195.39997558593748" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="165.4000244140625" minWidth="10.0" prefWidth="150.60001220703128" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="195.60009765625" minWidth="10.0" prefWidth="93.4000122070313" />
+                                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="213.199951171875" minWidth="10.0" prefWidth="174.99998779296868" />
+                                    </columnConstraints>
+                                    <rowConstraints>
+                                        <RowConstraints maxHeight="51.2" minHeight="10.0" prefHeight="48.80000610351563" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="56.40001220703125" minHeight="10.0" prefHeight="45.59999389648438" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="109.99999999999999" minHeight="9.200000000000003" prefHeight="27.79998168945312" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="100.79999999999998" minHeight="0.0" prefHeight="39.800018310546875" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="128.40003356933596" minHeight="10.0" prefHeight="82.80000000000001" vgrow="SOMETIMES" />
+                                        <RowConstraints maxHeight="95.19999694824219" minHeight="0.0" prefHeight="66.0" vgrow="SOMETIMES" />
+                                    </rowConstraints>
+                                    <children>
+                                        <Label text="First Name" textAlignment="CENTER" />
+                                        <Label text="Last Name" GridPane.rowIndex="1" />
+                                        <Label text="Date of Birth" GridPane.rowIndex="2" />
+                                        <Label text="Account Type" GridPane.rowIndex="3" />
+                                        <TextField fx:id="closefirstName" prefHeight="7.0" prefWidth="162.0" GridPane.columnIndex="1" />
+                                        <TextField fx:id="closelastName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                        <DatePicker fx:id="closedob" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                                        <Label text="Account Type" GridPane.rowIndex="3" />
+                                        <RadioButton fx:id="closechecking" text="Checking" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="3">
+                                            <toggleGroup>
+                                                <ToggleGroup fx:id="closeaccountGroup" />
+                                            </toggleGroup>
+                                        </RadioButton>
+                                        <RadioButton fx:id="closecollegeChecking" text="College Checking" GridPane.columnIndex="2" GridPane.rowIndex="3">
+                                            <toggleGroup>
+                                                <fx:reference source="accountGroup" />
+                                            </toggleGroup>
+                                        </RadioButton>
+                                        <RadioButton fx:id="closesavings" text="Savings" GridPane.columnIndex="3" GridPane.rowIndex="3">
+                                            <toggleGroup>
+                                                <fx:reference source="accountGroup" />
+                                            </toggleGroup>
+                                        </RadioButton>
+                                        <RadioButton fx:id="closemarket" text="Money Markets" GridPane.columnIndex="4" GridPane.rowIndex="3">
+                                            <toggleGroup>
+                                                <fx:reference source="accountGroup" />
+                                            </toggleGroup>
+                                        </RadioButton>
+                                        <GridPane GridPane.columnIndex="1" GridPane.rowIndex="5">
+                                            <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                        </GridPane>
+                                        <GridPane GridPane.columnIndex="2" GridPane.rowIndex="4">
+                                            <columnConstraints>
+                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                            </columnConstraints>
+                                            <rowConstraints>
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                            </rowConstraints>
+                                            <children>
+                                                <RadioButton fx:id="closenb" mnemonicParsing="false" text="NB" GridPane.halignment="CENTER">
+                                                    <toggleGroup>
+                                                        <ToggleGroup fx:id="closecampusGroup" />
+                                                    </toggleGroup>
+                                                </RadioButton>
+                                                <RadioButton fx:id="closenewark" mnemonicParsing="false" text="Newark" GridPane.halignment="CENTER" GridPane.rowIndex="1" >
+                                                    <fx:reference source="closecampusGroup" />
+                                                </RadioButton>
+                                                <RadioButton fx:id="closecamden" mnemonicParsing="false" text="Camden" GridPane.halignment="CENTER" GridPane.rowIndex="2">
+                                                    <fx:reference source="closecampusGroup" />
+
+                                                </RadioButton>
+                                            </children>
+                                        </GridPane>
+                                        <Button mnemonicParsing="false" onAction="#closeAccount" text="Open" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="5" />
+                                        <CheckBox fx:id="closeloyal" mnemonicParsing="false" text="Loyal Customer" GridPane.columnIndex="4" GridPane.rowIndex="4" GridPane.valignment="TOP" />
+                                    </children>
+                                </GridPane>
+                            </children>
+                        </AnchorPane>
+                    </content>
 
                 </Tab>
                 <Tab text="Deposit / Withdraw">
